cms/ghost/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ghost
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:
  rules:
  - host: ghost.demo.local
    http:
      paths:
      - path: /
        backend:
          serviceName: ghost
          servicePort: 2368
